--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -4,4 +4,11 @@ currency:
 cost:
   rub:
     perKg: 400
+    perCbm: 90000
     minimal: 350
+area:
+  latitudeMin: 45
+  latitudeMax: 65
+  longitudeMin: 30
+  longitudeMax: 96
+  minimal: 450
